--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   firebase_database: ^10.0.9
   flutter_bloc: ^8.1.1
   firebase_storage: ^11.0.10
+  provider: ^6.0.1
 
   cached_network_image: ^3.2.3
 
